--- a/CSC510_Lecture_3/CSC510_lecture_3.tex
+++ b/CSC510_Lecture_3/CSC510_lecture_3.tex
@@ -63,12 +63,12 @@ The following is an extention of the previous work of focusing on:
 \[
   \sum_{i=0}^ni
 \]
-Where we say that?
+Where we say that:
 \[
     \sum_{i=\frac{n}{2}}^ni=\frac{n^2}{4}\leq  \sum_{i=1}^ni\leq\sum_{i=1}^n=n^2
 \]
 \[
-  \sum_{i=1}^ni=\frac{n(n+1)}{2}, n\geq 1 
+  \sum_{i=1}^ni=\frac{n(n+1)}{2}, n\geq 1
 \]
 
 \end{document}
