Pushing two assignments

--- a/CSC510_Assignment_3/CSC510_A3.tex
+++ b/CSC510_Assignment_3/CSC510_A3.tex
@@ -162,7 +162,7 @@ Describe a backtracking algorithm for finding the number of ways for the robot t
     \end{algorithmic}
   \end{algorithm}
 \textbf{Give a verbal justification for why your recurrence works. (Hint: you can think of row or column 0 as a bunch of walls)}\\
-The algorithm above works in the following way: We first consider the base cases for the problem description the first of which is the event in which the starting point is in fact an obstacle. In this event there are 0 ways to move anywhere else. The second base case is the event where the goal in question is in fact an obstacle, in this event there are also 0 ways to reach the goal. The third base case is the event when our indices become less than one  which may occur on recursive calls during the algorithm. Finally the last base case is the event where wer are considering the number of ways to move from the starting point to the starting point which is always 1 \\\
+The algorithm above works in the following way: We first consider the base cases for the problem description the first of which is the event in which the starting point is in fact an obstacle. In this event there are 0 ways to move anywhere else. The second base case is the event where the goal in question is in fact an obstacle, in this event there are also 0 ways to reach the goal. The third base case is the event when our indices become  which may occur on recursive calls during the algorithm. Finally the last base case is the event where wer are considering the number of ways to move from the starting point to the starting point which is always 1 \\\
 We now proceed to traversing the grid. Since the robot has limited movement and can only move down or right one cell at a time this means that for any given row the robot must be moving from the left to get there and for any given column the robot must be moving from above to get there. Since we can only arrive to a specific location on the grid from the left or from above for any given point(i,j) the number of ways to arrive to that location is the sum of the tile above and the tile to the left of it.\\\\
 This is our recurrence relation
 
